--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -36,19 +36,19 @@
 
   <div class="bar-footer" style="bottom:0;position:absolute;width:100%">
      <div class="item item-input-inset">
+	 <font color="#FF0000">Brightness:</font>  
+       <label class="item-input-wrapper">
+         <input type="text" placeholder="50" id="Bright">
+     </label>
+	 <br>
        <label class="item-input-wrapper">
          <input type="text" placeholder="message" id="message">
      </label>
      <button class="button button-small button-royal" id="send2uart">
          Uart
      </button>
- </div>
-<div class="bar-footer" style="bottom:0;position:absolute;width:100%">
-     <div class="item item-input-inset">
-     <font color="#FF0000">Brightness:</font>  
-       <label class="item-input-wrapper">
-         <input type="text" placeholder="message" id="Bright">
-     </label>
+
+     
      
  </div>
  <div class="button-bar">
