--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -37,7 +37,7 @@
   <div class="bar-footer" style="bottom:0;position:absolute;width:100%">
      <div class="item item-input-inset">
        <label class="item-input-wrapper">
-         <input type="text" placeholder="message" id="message">
+         <input type="text" placeholder="brightness" id="message">
      </label>
      <button class="button button-small button-royal" id="send2uart">
          Uart
