--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -36,6 +36,11 @@
 
   <div class="bar-footer" style="bottom:0;position:absolute;width:100%">
      <div class="item item-input-inset">
+	 <font color="#FF0000">Brightness:</font>  
+       <label class="item-input-wrapper">
+         <input type="text" placeholder="50" id="Bright">
+     </label>
+	 <br>
        <label class="item-input-wrapper">
          <input type="text" placeholder="brightness" id="message">
      </label>
@@ -133,6 +138,7 @@
 
         // 串口数据发送部分
         var inputMessage = document.getElementById('message');
+        var inputBright = document.getElementById('Bright');
         // 将消息发送到指定的通道
         function send2uart() {
             if ( inputMessage.value.length == 0 ) return;
@@ -163,10 +169,10 @@
 
         function led_red() {
             var topic = device_id+'/in/write';
-            if(inputMessage.value.length == 0)
+            if(inputBright.value.length == 0)
               var commond = '{"rgbled_switch":true,"rgbled_hues":0, "rgbled_saturation":100, "rgbled_brightness":100}'; 
             else
-              var commond = '{"rgbled_switch":true,"rgbled_hues":0, "rgbled_saturation":100, "rgbled_brightness":' + inputMessage.value + '}';  
+              var commond = '{"rgbled_switch":true,"rgbled_hues":0, "rgbled_saturation":100, "rgbled_brightness":' + inputBright.value + '}';  
             client.publish(topic, commond);
         }
         // document.querySelector('#led_red').addEventListener('touchstart', led_red);
@@ -174,10 +180,10 @@
 
         function led_green() {
             var topic = device_id+'/in/write';
-            if(inputMessage.value.length == 0)
+            if(inputBright.value.length == 0)
               var commond = '{"rgbled_switch":true,"rgbled_hues":120, "rgbled_saturation":100, "rgbled_brightness":100}'; 
             else
-              var commond = '{"rgbled_switch":true,"rgbled_hues":120, "rgbled_saturation":100, "rgbled_brightness":' + inputMessage.value + '}';  
+              var commond = '{"rgbled_switch":true,"rgbled_hues":120, "rgbled_saturation":100, "rgbled_brightness":' + inputBright.value + '}';  
             client.publish(topic, commond);
         }
         // document.querySelector('#led_green').addEventListener('touchstart', led_green);
@@ -185,10 +191,10 @@
 
         function led_blue() {
             var topic = device_id+'/in/write';
-            if(inputMessage.value.length == 0)
+            if(inputBright.value.length == 0)
               var commond = '{"rgbled_switch":true,"rgbled_hues":240, "rgbled_saturation":100, "rgbled_brightness":100}'; 
             else
-              var commond = '{"rgbled_switch":true,"rgbled_hues":240, "rgbled_saturation":100, "rgbled_brightness":' + inputMessage.value + '}';  
+              var commond = '{"rgbled_switch":true,"rgbled_hues":240, "rgbled_saturation":100, "rgbled_brightness":' + inputBright.value + '}';  
             client.publish(topic, commond);
         }
         // document.querySelector('#led_blue').addEventListener('touchstart', led_blue);
