--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -38,18 +38,16 @@
      <div class="item item-input-inset">
 	 <font color="#FF0000">Brightness:</font>  
        <label class="item-input-wrapper">
-         <input type="text" placeholder="50" id="Bright">
+         <input type="text" placeholder="brightness" id="Bright">
      </label>
-	 <br>
+	 </div>
+	 <div class="item item-input-inset">
        <label class="item-input-wrapper">
-         <input type="text" placeholder="brightness" id="message">
+         <input type="text" placeholder="message" id="message">
      </label>
      <button class="button button-small button-royal" id="send2uart">
          Uart
      </button>
-
-     
-     
  </div>
  <div class="button-bar">
      <a class="button" style="background:red; color:white" id="led_red">Red</a>
