change number key
修改亮度输入框为数字框

--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -38,7 +38,7 @@
      <div class="item item-input-inset">
 	 <font color="#FF0000">Brightness:</font>  
        <label class="item-input-wrapper">
-         <input type="text" placeholder="brightness" id="Bright">
+         <input type="number" style="IME-MODE: disabled" placeholder="brightness" id="Bright">
      </label>
 	 </div>
 	 <div class="item item-input-inset">
