--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -91,6 +91,15 @@
                 </tr>                
             </table>
         </div>
+		<div class="switrgbhow">
+            <table width="100%">
+                <tr align="center" height="114px">
+                    <td valign="middle"><img id="switchDC" src="./image/03-turn-on.svg" alt=""><br/><span id="switchMotor">关</span></td>
+                    <!-- <td valign="middle"><hr class="hrline" size="80" /></td> -->
+                    <td valign="middle"><img id="dcimgid" src="./image/02-yellow.svg" alt=""><br/><span>振动测试</span></td>
+                </tr>                
+            </table>
+        </div>
         <!-- <div class="humihis">
             <div id="device_id"></div>
             <div id="debug"></div>
@@ -206,6 +215,23 @@
                 commond = '{"device_switch":true}';
                 $("#switchbtn").attr("src", "./image/03-turn-on.svg");
                 $("#switchspan").text("开");
+            }
+            client.publish(topic, commond);
+        });
+		
+		// 控制按钮显示的事件
+        $("#switchDC").click(function() {
+            var topic = device_id+'/in';
+            var commond;
+            var swtimg = $("#switchDC").attr("src");
+            if("./image/03-turn-on.svg" == swtimg){
+                commond = '{"dcmotor_switch":false}';
+                $("#switchDC").attr("src", "./image/03-turn-off.svg");
+                $("#switchMotor").text("关");
+            }else{
+                commond = '{"dcmotor_switch":true}';
+                $("#switchDC").attr("src", "./image/03-turn-on.svg");
+                $("#switchMotor").text("开");
             }
             client.publish(topic, commond);
         });
