--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -94,7 +94,7 @@
 		<div class="switrgbhow">
             <table width="100%">
                 <tr align="center" height="114px">
-                    <td valign="middle"><img id="switchDC" src="./image/03-turn-on.svg" alt=""><br/><span id="switchMotor">关</span></td>
+                    <td valign="middle"><img id="switchDC" src="./image/03-turn-off.svg" alt=""><br/><span id="switchMotor">关</span></td>
                     <!-- <td valign="middle"><hr class="hrline" size="80" /></td> -->
                     <td valign="middle"><img id="dcimgid" src="./image/02-yellow.svg" alt=""><br/><span>振动测试</span></td>
                 </tr>                
