--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -70,24 +70,25 @@
 <body>
     <div class="content">
         <div class="title">
-          <span>温湿度实时监测</span>
+          <span>智能生活热水器</span>
         </div>        
         <div class="temphumishow">
             <table width="100%" height="94px">
                 <tr align="center">
                     <td valign="middle" align="right"><img src="./image/01-temperature.svg" alt=""></td>
-                    <td valign="middle" align="left">&nbsp;&nbsp;<span>温度</span><br/>&nbsp;&nbsp;<span class="tempcls" id="tempid">28℃</span></td>
+                    <td valign="middle" align="left">&nbsp;&nbsp;<span>当前温度</span><br/>&nbsp;&nbsp;<span class="tempcls" id="tempid">28℃</span></td>
                     <td valign="middle" align="right"><img src="./image/01-humidity.svg" alt=""></td>
-                    <td valign="middle" align="left">&nbsp;&nbsp;<span>湿度</span><br/>&nbsp;&nbsp;<span class="humicls" id="humiid">42%</span></td>
+                    <td valign="middle" align="left">&nbsp;&nbsp;<span>设定温度</span><br/>&nbsp;&nbsp;<span class="humicls" id="humiid">42℃</span></td>
                 </tr>
             </table>
         </div>        
         <div class="switrgbhow">
             <table width="100%">
                 <tr align="center" height="114px">
-                    <td valign="middle"><img id="switchbtn" src="./image/03-turn-on.svg" alt=""><br/><span id="switchspan">开</span></td>
+                    <td valign="middle"><img id="switchbtn" src="./image/03-turn-off.svg" alt=""><br/><span id="switchspan">开</span></td>
                     <!-- <td valign="middle"><hr class="hrline" size="80" /></td> -->
-                    <td valign="middle"><img id="rgbimgid" src="./image/02-red.svg" alt=""><br/><span>温度阀值</span></td>
+                    <td valign="middle"><img id="rgbimgid1" src="./image/02-green.svg" alt=""><br/><span id="temp1">温度-</span></td>
+                    <td valign="middle"><img id="rgbimgid2" src="./image/02-red.svg" alt=""><br/><span id="temp2">温度+</span></td>
                 </tr>                
             </table>
         </div>
@@ -96,7 +97,7 @@
                 <tr align="center" height="114px">
                     <td valign="middle"><img id="switchDC" src="./image/03-turn-off.svg" alt=""><br/><span id="switchMotor">关</span></td>
                     <!-- <td valign="middle"><hr class="hrline" size="80" /></td> -->
-                    <td valign="middle"><img id="dcimgid" src="./image/02-yellow.svg" alt=""><br/><span>振动测试</span></td>
+                    <td valign="middle"><img id="dcimgid" src="./image/02-yellow.svg" alt=""><br/><span>温度报警</span></td>
                 </tr>                
             </table>
         </div>
@@ -187,20 +188,36 @@
                 // 显示温度
                 $("#tempid").text(tempval+"℃");
                 // 显示湿度
-                $("#humiid").text(msgjson.dht11_humidity+'%');
+                $("#humiid").text(msgjson.dht11_humidity+'℃');
                 // 温度超过29则红灯亮，20-29之间则绿灯亮，低于20黄灯亮
                 if(tempval > "32"){
                     led_red();
-                    $("#rgbimgid").attr("src", "./image/02-red.svg");
+                    $("#dcimgid").attr("src", "./image/02-red.svg");
                 }else if(tempval < "33" && (tempval > "19")){
                     led_green();
-                    $("#rgbimgid").attr("src", "./image/02-green.svg");
+                    $("#dcimgid").attr("src", "./image/02-green.svg");
                 }else if(tempval < "20"){
                     led_yellow();
-                    $("#rgbimgid").attr("src", "./image/02-yellow.svg");
+                    $("#dcimgid").attr("src", "./image/02-yellow.svg");
                 }
             }
         }
+
+        // 控制按钮显示的事件
+        $("#rgbimgid1").click(function() {
+            var topic = device_id+'/in';
+            var commond;
+            commond = '{"tempAC":true}';
+            client.publish(topic, commond);
+        });
+
+        // 控制按钮显示的事件
+        $("#rgbimgid2").click(function() {
+            var topic = device_id+'/in';
+            var commond;
+            commond = '{"tempDC":true}';
+            client.publish(topic, commond);
+        });
 
         // 控制按钮显示的事件
         $("#switchbtn").click(function() {
