温度值测试

--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -227,13 +227,13 @@
           //      t = setTemp + 1;
           //  else
           //      t = "75";
-          if(setTemp < "30")
+          if(setTemp < 30)
             t = "30";
-          else if(setTemp < "45")
+          else if(setTemp < 45)
             t = "45";
-          else if(setTemp < "55")
+          else if(setTemp < 55)
             t = "55";
-          else if(setTemp < "65")
+          else if(setTemp < 65)
             t = "65";
           else 
             t = "75"; 
