温度值测试2

--- a/39b5a7ee.html
+++ b/39b5a7ee.html
@@ -209,12 +209,11 @@
         $("#rgbimgid1").click(function() {
             var topic = device_id+'/in';
             var commond;
-           // var t;
-            //if(setTemp > "30")
-            //    t = setTemp - 1;
-            //else
-                t = "30";
-            commond = '{"setTemperature":' + t + '}';
+            if(setTemp > "30")
+                setTemp = setTemp - 1;
+            else
+                setTemp = "30";
+            commond = '{"setTemperature":' + setTemp + '}';
             client.publish(topic, commond);
         });
 
@@ -222,13 +221,11 @@
         $("#rgbimgid2").click(function() {
             var topic = device_id+'/in';
             var commond;
-          //  var t;
-          //  if(setTemp < "75")
-          //      t = setTemp + 1;
-          //  else
-          //      t = "75";
-            t = "75"; 
-            commond = '{"setTemperature":' + t + '}';
+            if(setTemp < "75")
+                setTemp = setTemp + 1;
+            else
+                setTemp = "75"; 
+            commond = '{"setTemperature":' + setTemp + '}';
             client.publish(topic, commond);
         });
 
